# Astro

./: .gitignore  CLAUDE.md  README.md  docs.config.json
.github/workflows/: release.yml
branding/: astro-browser.desktop  astro.conf
docs/: architecture.mdx  build.mdx  index.mdx  oxy-integration.mdx
gn_args/: android.gn  linux.gn  linux_debug.gn  macos.gn  windows.gn  windows_arm64.gn
patches/astro/: 001-branding-strings.patch  002-branding-product-name.patch  003-branding-linux-package.patch  004-default-search-duckduckgo.patch  005-branding-components-strings.patch  006-user-agent-astro.patch  007-oxy-auth-build-hook.patch  008-os-crypt-visibility.patch  009-branding-settings-strings.patch  010-oxy-theme-color.patch  011-astro-url-scheme-alias.patch  012-settings-border-style.patch  013-settings-google-to-oxy.patch  014-oxy-profile-menu-header.patch  015-oxy-profile-menu-impl.patch  016-ntp-astro-logo.patch  017-ntp-logo-css.patch  018-ntp-logo-ts.patch  019-ntp-default-sites.patch  020-register-oxy-prefs.patch  021-omnibox-display-astro.patch  022-autocomplete-astro-scheme.patch  023-url-fixer-astro-scheme.patch  024-astro-scheme-constant.patch  025-astro-scheme-register.patch  026-navigator-astro-rewrite.patch  027-scheme-classifier-astro.patch  028-security-display-astro.patch  029-copy-url-astro.patch  030-protocol-handler-astro.patch  031-linux-icon-name.patch  032-linux-desktop-name.patch  033-shared-settings-google-to-oxy.patch  034-profiles-google-to-oxy.patch  036-navigator-auth-intercept.patch  037-builtin-provider-astro-scheme.patch  038-dino-game-astro-scheme.patch  039-auth-navigation-throttle-register.patch  040-tab-hover-astro-scheme.patch  041-navigation-controller-astro.patch  (+16 more)
src/chrome/app/vector_icons/: alia_spark.icon
src/chrome/browser/oxy/: BUILD.gn  oxy_alia_side_panel.cc  oxy_alia_side_panel.h  oxy_auth_callback_handler.cc  oxy_auth_callback_handler.h  oxy_auth_navigation_throttle.cc  oxy_auth_navigation_throttle.h  oxy_auth_service.cc  oxy_auth_service.h  oxy_auth_token_store.cc  oxy_auth_token_store.h  oxy_cookie_signin_observer.cc  oxy_cookie_signin_observer.h
src/chrome/browser/oxy/adblock/: BUILD.gn  adblock_domain_resolver.cc  adblock_domain_resolver.h  astro_adblock_bubble_view.cc  astro_adblock_bubble_view.h  astro_adblock_engine.cc  astro_adblock_engine.h  astro_adblock_filter_list_catalog.cc  astro_adblock_filter_list_catalog.h  astro_adblock_filter_list_updater.cc  astro_adblock_filter_list_updater.h  astro_adblock_resource_type.cc  astro_adblock_resource_type.h  astro_adblock_service.cc  astro_adblock_service.h  astro_adblock_service_factory.cc  astro_adblock_service_factory.h  astro_adblock_tab_helper.cc  astro_adblock_tab_helper.h  astro_adblock_toolbar_button.cc  astro_adblock_toolbar_button.h  astro_adblock_url_loader_throttle.cc  astro_adblock_url_loader_throttle.h
src/chrome/browser/oxy/adblock/rs/: BUILD.gn
src/chrome/browser/oxy/adblock/rs/src/: convert.rs  engine.rs  filter_set.rs  lib.rs  result.rs
src/chrome/browser/oxy/adblock/webui/: astro_adblock_ui.cc  astro_adblock_ui.h  astro_adblock_ui_handler.cc  astro_adblock_ui_handler.h
src/chrome/browser/oxy/webui/: astro_alia_ui.cc  astro_alia_ui.h  astro_error_ui.cc  astro_error_ui.h  astro_ntp_ui.cc  astro_ntp_ui.h  astro_settings_handler.cc  astro_settings_handler.h  astro_settings_ui.cc  astro_settings_ui.h  astro_whats_new_ui.cc  astro_whats_new_ui.h
tools/: apply-branding.sh  apply-patches.sh  astro-launch.sh  build.sh  fetch-chromium.sh  fetch-cross-deps.sh  install-local.sh  package-android.sh  package-deb.sh  package-linux.sh  package-macos.sh  package-release.sh  package-windows.sh  sync-ungoogled.sh  update-chromium.sh  vendor-adblock-rust.sh
tools/docker/: Dockerfile.build
webui/alia/: index.ts  package.json  vite.config.ts
webui/alia/src/: alia-panel.ts  chrome.d.ts  index.html  style.css
webui/error/: package.json  tsconfig.json  vite.config.ts
webui/error/src/: index.html  main.ts  styles.css
webui/ntp/: merge-for-chromium.ts  package.json  vite.config.ts
webui/ntp/src/: index.html  main.ts  style.css
webui/settings/: package.json  vite.config.ts
webui/settings/src/: components.ts  icons.ts  index.html  main.ts  sections.ts  state.ts  style.css
webui/whats-new/: package.json
webui/whats-new/src/: index.html  main.ts  style.css
~/.config/astro/: Local State  SingletonCookie  SingletonLock  SingletonSocket
~/.config/astro/Default/: DIPS-wal  History-journal  Preferences  README  Web Data
~/.config/astro/Default/Code Cache/wasm/index-dir/: the-real-index
~/.config/astro/Default/DawnGraphiteCache/: index
~/.config/astro/Default/DawnWebGPUCache/: index
~/.config/astro/Default/Extension Rules/: LOG
~/.config/astro/Default/Extension Scripts/: LOG
~/.config/astro/Default/Extension State/: LOG
~/.config/astro/Default/GCM Store/Encryption/: LOG
~/.config/astro/Default/GPUCache/: index
~/.config/astro/Default/Local Storage/leveldb/: LOG
~/.config/astro/Default/Session Storage/: LOG
~/.config/astro/Default/Sessions/: Session_13419906237662398
~/.config/astro/Default/Shared Dictionary/cache/index-dir/: the-real-index
~/.config/astro/Default/Site Characteristics Database/: LOG
~/.config/astro/Default/Sync Data/LevelDB/: LOG
~/.config/astro/Default/shared_proto_db/: LOG
~/.config/astro/Default/shared_proto_db/metadata/: LOG
~/.config/astro/GrShaderCache/: data_0  data_1  index
~/.config/astro/GraphiteDawnCache/: index
~/.config/astro/ShaderCache/: index
