# Copyright 2026 Oxy. All rights reserved.
# Use of this source code is governed by a BSD-style license.

source_set("oxy") {
  sources = [
    "oxy_alia_side_panel.cc",
    "oxy_alia_side_panel.h",
    "oxy_auth_callback_handler.cc",
    "oxy_auth_callback_handler.h",
    "oxy_auth_navigation_throttle.cc",
    "oxy_auth_navigation_throttle.h",
    "oxy_auth_service.cc",
    "oxy_auth_service.h",
    "oxy_auth_token_store.cc",
    "oxy_auth_token_store.h",
    "oxy_cookie_signin_observer.cc",
    "oxy_cookie_signin_observer.h",
  ]

  deps = [
    "//base",
    "//chrome/browser/profiles",
    "//chrome/browser/ui",
    "//components/keyed_service/core",
    "//components/os_crypt/sync",
    "//components/prefs",
    "//content/public/browser",
    "//mojo/public/cpp/bindings",
    "//net",
    "//services/network/public/cpp",
    "//services/network/public/mojom",
    "//ui/views",
    "//ui/views/controls/webview",
    "//url",
  ]
}
